--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "^9.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
