ADD materialui depedencie

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Benoit Goupilleau",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "next": "^9.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
